# book-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
assets/: books.csv  opinions.csv  reviews.csv  users.csv
book_api/books/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
book_api/books/management/commands/: loadbooksdata.py
book_api/books/migrations/: 0001_initial.py  0002_auto_20201002_2143.py
book_api/books/tests/: test_views.py
book_api/reviews/: admin.py  apps.py  models.py  urls.py  views.py
book_api/reviews/management/commands/: loadreviewsdata.py
book_api/reviews/migrations/: 0001_initial.py  0002_auto_20201003_1239.py
book_api/users/: admin.py  apps.py  models.py
book_api/users/management/commands/: loadusersdata.py
book_api/users/migrations/: 0001_initial.py
book_api/utils/: apps.py  commands.py  responses.py  testutils.py  views.py
book_api/utils/tests/: test_commands.py
compose/django/: Dockerfile  entrypoint
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py
