[tool.poetry]
name = "book_api"
version = "0.5.0"
authors = ["Maciej Rogosz"]
description = ""
packages = []

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
wheel = "^0.35.1"
pip = "^20.2.2"
django-environ = "^0.4.5"
pytest = "^6.1.1"
pytest-dotenv = "^0.5.2"
pytest-django = "^3.10.0"

[tool.pytest.ini_options]
minversion = "6.0.1"
addopts = "-ra -q"
testpaths = ["book_api"]
DJANGO_SETTINGS_MODULE = "config.settings.local"
env_files = [
    ".env"
]
